[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakanalh/highway"
homepage = "https://github.com/rakanalh/highway"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bridge", "ethereum", "substrate", "web3"]
exclude = [
    ".github/",
    "bin/",
    "**/tests/",
    "**/test-data/",
    "**/testdata/",
    "examples",
    "scripts/",
]

[profile.release]
debug = false

[workspace]
members = [
  "node",
  "lib/primitives",
  "lib/core",
  "lib/chains/ethereum",
  "lib/chains/substrate",
]
# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"
