[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakanalh/highway"
homepage = "https://github.com/rakanalh/highway"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bridge", "ethereum", "substrate", "web3"]
exclude = [
  ".github/",
  "**/tests/",
]

[workspace]
members = [
  "node",
  "lib/core",
  "lib/chains/evm",
  "lib/chains/substrate",
  "lib/network",
]
# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
alloy = { version = "0.2.1", default-features = false }
anyhow = { version = "1.0.86" }
async-trait = "0.1.75"
clap = { version = "4.4.11" }
derive_more = { version = "0.99.17" }
futures = { version = "0.3.30" }
libp2p = { version = "0.54.1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0.1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
