[package]
name = "highway-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Highway crates
highway-core = { path = "../lib/core" }
highway-ethereum = { path = "../lib/chains/ethereum" }
