[package]
name = "highway-core"
version.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.75"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.1", default-features = false }
tokio = { version = "1", default-features = false }
