[package]
name = "highway-evm"
version.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["sol-types", "providers", "provider-http", "provider-ws", "contract", "reqwest", "rpc-types-eth"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

highway-core = { path = "../../core" }
